--- a/.html
+++ b/.html
@@ -3,14 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lead Generation Landing Page</title>
-
+    <title>Click-Through Landing Page</title>
     <style>
         * {
             margin: 0;
             padding: 0;
             box-sizing: border-box;
-            font-family: Arial, Helvetica, sans-serif;
+            font-family: Arial, sans-serif;
         }
 
         body {
@@ -18,24 +17,20 @@
             color: #333;
         }
 
-        /* HERO */
+        /* HERO SECTION */
         .hero {
-            background: linear-gradient(135deg, #4f46e5, #6366f1);
-            color: #fff;
-            padding: 80px 20px;
-        }
-
-        .container {
-            max-width: 1100px;
-            margin: auto;
             display: flex;
-            gap: 40px;
-            align-items: center;
             flex-wrap: wrap;
+            align-items: center;
+            justify-content: space-between;
+            max-width: 1100px;
+            margin: 0 auto;
+            padding: 80px 20px;
         }
 
         .hero-text {
             flex: 1;
+            min-width: 300px;
         }
 
         .hero-text h1 {
@@ -46,77 +41,57 @@
         .hero-text p {
             font-size: 18px;
             line-height: 1.6;
+            margin-bottom: 30px;
         }
 
-        /* FORM */
-        .form-box {
-            background: #fff;
-            padding: 30px;
-            border-radius: 10px;
-            flex: 1;
-            box-shadow: 0 10px 30px rgba(0,0,0,0.15);
-        }
-
-        .form-box h2 {
-            margin-bottom: 15px;
-            color: #111;
-        }
-
-        .form-box input {
-            width: 100%;
-            padding: 12px;
-            margin-bottom: 12px;
-            border-radius: 6px;
-            border: 1px solid #ccc;
-            font-size: 15px;
-        }
-
-        .form-box button {
-            width: 100%;
-            padding: 14px;
+        .cta-button {
+            display: inline-block;
+            padding: 16px 40px;
             background: #4f46e5;
             color: #fff;
-            border: none;
-            border-radius: 6px;
-            font-size: 16px;
-            cursor: pointer;
+            font-size: 18px;
+            border-radius: 50px;
+            text-decoration: none;
+            transition: 0.3s;
         }
 
-        .form-box button:hover {
+        .cta-button:hover {
             background: #4338ca;
         }
 
-        .form-box small {
-            display: block;
-            margin-top: 10px;
-            color: #666;
-            text-align: center;
+        .hero-image {
+            flex: 1;
+            min-width: 300px;
         }
 
-        /* BENEFITS */
+        .hero-image img {
+            width: 100%;
+            border-radius: 20px;
+        }
+
+        /* BENEFITS SECTION */
         .benefits {
-            padding: 70px 20px;
             background: #fff;
+            padding: 60px 20px;
+            text-align: center;
         }
 
         .benefits h2 {
-            text-align: center;
             margin-bottom: 40px;
         }
 
         .benefit-grid {
-            max-width: 1000px;
-            margin: auto;
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
             gap: 25px;
+            max-width: 1000px;
+            margin: auto;
         }
 
         .benefit {
             background: #f4f7fb;
             padding: 25px;
             border-radius: 10px;
-            text-align: center;
         }
 
         .benefit h3 {
@@ -125,41 +100,20 @@
 
         /* TESTIMONIAL */
         .testimonial {
-            padding: 60px 20px;
             background: #f4f7fb;
+            padding: 60px 20px;
             text-align: center;
         }
 
         .testimonial p {
-            font-size: 18px;
             max-width: 700px;
             margin: auto;
             margin-bottom: 15px;
+            font-size: 18px;
         }
 
         .testimonial strong {
             color: #4f46e5;
-        }
-
-        /* FOOTER CTA */
-        .final-cta {
-            background: #4f46e5;
-            color: #fff;
-            padding: 60px 20px;
-            text-align: center;
-        }
-
-        .final-cta h2 {
-            margin-bottom: 20px;
-        }
-
-        .final-cta a {
-            background: #fff;
-            color: #4f46e5;
-            padding: 14px 30px;
-            border-radius: 30px;
-            text-decoration: none;
-            font-weight: bold;
         }
 
         @media (max-width: 768px) {
@@ -173,60 +127,40 @@
 
 <!-- HERO SECTION -->
 <section class="hero">
-    <div class="container">
-        <div class="hero-text">
-            <h1>Get Free Marketing Guide</h1>
-            <p>
-                Learn how to generate high-quality leads and grow your business faster.
-                Download our proven guide for free.
-            </p>
-        </div>
-
-        <div class="form-box">
-            <h2>Download Now</h2>
-            <form>
-                <input type="text" placeholder="Your Name" required>
-                <input type="email" placeholder="Your Email" required>
-                <input type="tel" placeholder="Phone Number">
-                <button type="submit">Get Free Guide</button>
-            </form>
-            <small>🔒 We never spam. Your data is safe.</small>
-        </div>
+    <div class="hero-text">
+        <h1>Boost Your Productivity Today</h1>
+        <p>Our tool helps you organize tasks, track progress, and manage your team efficiently.  
+        Click below to get started!</p>
+        <a href="https://example.com/next-page" class="cta-button">Get Started Now</a>
+    </div>
+    <div class="hero-image">
+        <img src="https://via.placeholder.com/500x350" alt="Product Screenshot">
     </div>
 </section>
 
 <!-- BENEFITS -->
 <section class="benefits">
-    <h2>What You Will Learn</h2>
+    <h2>Why You'll Love Our Tool</h2>
     <div class="benefit-grid">
         <div class="benefit">
-            <h3>More Leads</h3>
-            <p>Proven strategies to attract high-quality customers.</p>
+            <h3>Organize Tasks</h3>
+            <p>Keep all your tasks in one place and never miss a deadline.</p>
         </div>
         <div class="benefit">
-            <h3>Higher Conversion</h3>
-            <p>Turn visitors into paying clients.</p>
+            <h3>Track Progress</h3>
+            <p>Visualize team progress and improve efficiency.</p>
         </div>
         <div class="benefit">
-            <h3>Smart Marketing</h3>
-            <p>Save time with automated systems.</p>
+            <h3>Collaborate Easily</h3>
+            <p>Work together with your team seamlessly.</p>
         </div>
     </div>
 </section>
 
 <!-- TESTIMONIAL -->
 <section class="testimonial">
-    <p>
-        “This guide helped me double my leads in just 30 days.
-        Highly recommended!”
-    </p>
-    <strong>— John Doe, Digital Marketer</strong>
-</section>
-
-<!-- FINAL CTA -->
-<section class="final-cta">
-    <h2>Start Growing Your Business Today</h2>
-    <a href="#">Get the Free Guide</a>
+    <p>“This tool completely transformed how I manage my team. Productivity has skyrocketed!”</p>
+    <strong>— Jane Doe, Project Manager</strong>
 </section>
 
 </body>
